# libw2l

./: CMakeLists.txt
src/: b2l.h  b2l.txt  b2l_test.cpp  cli.cpp  w2l_encode.cpp  w2l_encode.h  w2l_encode_backend.cpp  w2l_encode_backend.h
